--- a/Test.html
+++ b/Test.html
@@ -1,3 +1,13 @@
-<h1>I'm a big header</h1>
-<p>I'm a paragraph</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>testpage</title>
+</head>
+<body>
+	<h1>I'm a big header</h1>
+<p>I'm a <b>paragraph</b> </p>
 <a href="https://google.com" target="_blank" title="Lets go to the moon">Click Me! Cutie. I'm a link</a>
+<p>I love oscar! <br> my boyyyyyy!</p>
+<img src="img/meandoscar.png">
+</body>	
+</html>
