--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<!-- footer -->
 	<footer>
-		<p>The dude ABIDES. This awesome site was created with the guidence of the awesome <a href="https://taptapkaboom.com"> TapTapKaboom </a>. &copy; Mashall Smith</p>
+		<p>The Dude ABIDES. This awesome site was created with the guidence of the awesome <a href="https://taptapkaboom.com"> TapTapKaboom </a>. &copy; Mashall Smith</p>
 	</footer>
 </body>
 </html>
